# CsvAnalyzerCpp

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  vcpkg.json
dev/: build.bat  build_release.bat  setup_vcpkg.bat  test.bat
include/csv_analyzer_cpp/: analyzer.h
src/: analyzer.cpp  main.cpp
tests/: test_analyzer.cpp
tests/test_data/: csv_large.csv  csv_small.csv
